--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Hello world :D</h1>
+    <p>Welcome to my first? web page</p>
+  </body>
 </html>
