testing for live server

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>Hello world :D</h1>
-    <p>Welcome to my first? web page</p>
+    <p>Welcome to my first? web page lolol hihi</p>
   </body>
 </html>
